empezado crud de empresa

--- a/assets/css/list-style.css
+++ b/assets/css/list-style.css
@@ -6,6 +6,15 @@ main, footer{
 	position: relative;
 	top: 100px;
 }
+body{padding-top:30px;}
+
+.glyphicon {  margin-bottom: 10px;margin-right: 10px;}
+
+small {
+display: block;
+line-height: 1.428571429;
+color: #999;
+}
 
 /* USER LIST TABLE */
 .user-list tbody td > img {
