--- a/assets/css/list-style.css
+++ b/assets/css/list-style.css
@@ -15,6 +15,9 @@ display: block;
 line-height: 1.428571429;
 color: #999;
 }
+.tabla-normal,#lista_operarios {
+	min-height: 400px;
+}
 
 /* USER LIST TABLE */
 .user-list tbody td > img {
