--- a/assets/css/list-style.css
+++ b/assets/css/list-style.css
@@ -10,6 +10,10 @@ body{padding-top:30px;}
 
 .glyphicon {  margin-bottom: 10px;margin-right: 10px;}
 
+#fotoPerfil{
+	max-width: 120px;
+}
+
 small {
 display: block;
 line-height: 1.428571429;
